kubernetes/apps/it-tools/it-tools-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools
  namespace: it-tools
spec:
  parentRefs:
    - name: gateway-internal
      namespace: gateway
  hostnames:
    - it-tools.local.erwinkersten.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: it-tools
          port: 80
